# asphinx

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  asphinx.toml  build.rs  cache.json  config.toml  filetree.json  flake.nix  index.html  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: check.yml  depbot_auto_meger.yaml  deploy.yml  publish.yml  update-flake-lock.yml
asphinx_derive/: Cargo.toml
assets/: Cargo.toml  index.css  main-0GDVmnfb.css  main-6ORpJFDt.js  main-B5k2iBPK.css  main-BfXZp5ip.js  main-C-n0F6TH.js  main-DGDYGu92.js  main-Dmk1p4W5.css  main-P92uuvGu.css
book1/: ch1.html  ch2.html  index.html
book2/: ch1.html  ch2.html  index.html
builtin/assets/: breadcrumb.css  index.css  prism.css
builtin/layouts/: head.html.jinja  single.html.jinja
content/: index.adoc
content/book1/: ch1.adoc  ch2.adoc  index.adoc
content/book2/: ch1.adoc  ch2.adoc  index.adoc
content/getting-started/: basic-usage.adoc  index.adoc  installation.adoc  project-structure.adoc  quick-start.adoc
content/user-guide/: index.adoc
getting-started/: basic-usage.html  index.html  installation.html  project-structure.html  quick-start.html
layouts/: head.html.jinja  single.html.jinja  style.html.jinja
pagefind/: pagefind-entry.json  pagefind.en_28f6542152.pf_meta  pagefind.en_786d7cef14.pf_meta  pagefind.en_a4887dd697.pf_meta  wasm.en.pagefind  wasm.unknown.pagefind
pagefind/fragment/: en_381c929.pf_fragment  en_5c1c5d2.pf_fragment  en_5e7a3ef.pf_fragment  en_7598d43.pf_fragment  en_7d1c14c.pf_fragment  en_8202eb3.pf_fragment  en_87a6c73.pf_fragment  en_9610155.pf_fragment  en_9824d37.pf_fragment  en_99f917a.pf_fragment  en_b5e8a10.pf_fragment  en_b62e245.pf_fragment  en_c61f496.pf_fragment  en_c70de43.pf_fragment  en_c9295ad.pf_fragment  en_cc68844.pf_fragment  en_dad7f2a.pf_fragment  en_db6a652.pf_fragment  en_dcd962d.pf_fragment  en_e5381ed.pf_fragment  en_fa8ba78.pf_fragment
pagefind/index/: en_84370bb.pf_index  en_b87833a.pf_index  en_e976209.pf_index
src/: asciidoctor.rs  asciidoctor_builder.rs  config.rs  context.rs  duration.rs  error.rs  filetree.rs  generator.rs  git.rs  html.rs  index.html  index.rs  jinjaext.rs  main.rs  tmpl.rs  utils.rs
src/config/: asciidoc.rs
src/context/: index.rs  single.rs
src/utils/: asciidoctor_builder.rs  duration.rs  git.rs  html.rs  jinjaext.rs  tests.rs  tmpl.rs
src/utils/tests/: index.html  test_html.rs
theme/: components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
theme/layouts/: page.html
theme/src/: history.tsx  main.js  main.jsx  main.tsx  search-bar.tsx  style.css  tail.js  tail.jsx  tail.tsx
theme/src/assets/: asciidoc.css  pygments.css
theme/src/components/: file-tree.tsx
theme/src/components/ext/: highlight.tsx
theme/src/components/ui/: command.tsx  dialog.tsx
theme/src/types/: pagefind.d.ts
user-guide/: index.html
