[package]
name = "asphinx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
minijinja = { version = '2.5.0', features = ["loader"] }
scraper = '0.21.0'
serde = { version = '1.0.215', features = ["derive"] }
futures = '0.3.31'
minify-html = '0.15.0'
clap = { version = '4.5.21', features = ["derive"] }
chrono = '0.4.38'
gix = '0.68.0'
log = '0.4.22'
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "local-time",
  "time",
  "env-filter",
] }
toml = "0.8.19"
lazy-regex = "3.3.0"
anyhow = "1.0.93"
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.41.1", features = [
  "fs",
  "process",
  "rt-multi-thread",
  "macros",
] }
thiserror = "2.0.3"
urlencoding = "2.1.3"
