[package]
name = "asphinx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
minijinja = { version = '2.5.0', features = ["loader"] }
scraper = '0.21.0'
serde = { version = '1.0.217', features = ["derive"] }
futures = '0.3.31'
minify-html = '0.15.0'
clap = { version = '4.5.21', features = ["derive"] }
chrono = '0.4.39'
gix = '0.68.0'
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "local-time",
  "time",
  "env-filter",
] }
toml = "0.8.19"
lazy-regex = "3.4.1"
anyhow = "1.0.93"
time = { version = "0.3.37", features = ["macros"] }
tokio = { version = "1.41.1", features = [
  "fs",
  "process",
  "rt-multi-thread",
  "macros",
] }
thiserror = "2.0.9"
urlencoding = "2.1.3"
redb = "2.4.0"
serde_json = "1.0.133"
