[package]
name = "asphinx"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
minijinja = { version = '2.11.0', features = ["loader"] }
scraper = '0.23.1'
serde = { version = '1.0.219', features = ["derive"] }
futures = '0.3.31'
minify-html = '0.16.4'
clap = { version = '4.5.39', features = ["derive"] }
chrono = '0.4.41'
gix = '0.72.1'
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "local-time",
  "time",
  "env-filter",
] }
toml = "0.8.22"
lazy-regex = "3.4.1"
anyhow = "1.0.98"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
urlencoding = "2.1.3"
redb = "2.6.0"
serde_json = "1.0.140"
fs-more = "0.8.1"
indicatif = "0.18.0"
console = "0.16.0"
pagefind = "1.4.0-alpha.1"
