[package]
name = "asphinx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.8.1" }
tokio = { version = "1.28.1", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = "0.3.17"
minijinja = { version = '0.33.0', features = ["source"] }
scraper = '0.16.0'
serde = { version = '1.0.163', features = ["derive"] }
lazy_static = '1.4.0'
futures = '0.3.28'
walkdir = '2.3.3'
minify-html = '0.11.1'
clap = { version = '4.3.0', features = ["derive"] }
chrono = '0.4.24'
